--- a/Glyph/Glyph.csproj
+++ b/Glyph/Glyph.csproj
@@ -1,177 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{457CBBF3-26C7-478B-B4EB-1F85FF3C07F5}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Glyph</RootNamespace>
-    <AssemblyName>Glyph</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;WINDOWS</DefineConstants>
-    <DebugType>full</DebugType>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE;WINDOWS</DefineConstants>
-    <Optimize>true</Optimize>
-    <DebugType>pdbonly</DebugType>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <TargetFramework>$(TargetFramework)</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="MonoGame.Framework.Portable">
-      <Version>3.7.1.189</Version>
-    </PackageReference>
-    <PackageReference Include="NLog">
-      <Version>4.4.12</Version>
-    </PackageReference>
-    <PackageReference Include="PropertyChanged.Fody">
-      <Version>2.1.4</Version>
-    </PackageReference>
-    <PackageReference Include="System.Reactive">
-      <Version>3.1.1</Version>
-    </PackageReference>
+    <ProjectReference Include="..\External\Fingear\External\Stave\Diese.Collections %28Stave%29\Diese.Collections %28Stave%29.csproj" />
+    <ProjectReference Include="..\External\Fingear\External\Taskete\Diese %28Taskete%29\Diese %28Taskete%29.csproj" />
+    <ProjectReference Include="..\External\Simulacra\External\Niddle\Niddle\Niddle.csproj" />
+    <ProjectReference Include="..\External\Simulacra\Simulacra\Simulacra.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Windows" />
-    <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
+    <PackageReference Include="MonoGame.Framework.Portable" Version="3.7.1.189" PrivateAssets="All" />
+    <PackageReference Include="NLog" Version="4.4.12" />
+    <PackageReference Include="PropertyChanged.Fody" Version="2.1.4" />
+    <PackageReference Include="System.Reactive" Version="3.1.1" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Angle.cs" />
-    <Compile Include="Export\AssemblyContainsAttribute.cs" />
-    <Compile Include="Axis.cs" />
-    <Compile Include="Export\TypeImporter.cs" />
-    <Compile Include="Handlable.cs" />
-    <Compile Include="Color.Extension.cs" />
-    <Compile Include="IContentLibrary.cs" />
-    <Compile Include="IO\DataContractSerializationFormat.cs" />
-    <Compile Include="IO\ISerializationFormat.cs" />
-    <Compile Include="IO\Base\SerializationFormatBase.cs" />
-    <Compile Include="ISceneNode.cs" />
-    <Compile Include="ITag.cs" />
-    <Compile Include="Math\IRange.cs" />
-    <Compile Include="Math\ITransformation.cs" />
-    <Compile Include="Math\ITransformer.cs" />
-    <Compile Include="Math\Matrix3X3Trs.cs" />
-    <Compile Include="Math\Range.cs" />
-    <Compile Include="Math\RangeArea.cs" />
-    <Compile Include="Math\RangeUtils.cs" />
-    <Compile Include="Math\Shapes\Base\EdgedShapeBase.cs" />
-    <Compile Include="Math\Shapes\Segment.cs" />
-    <Compile Include="Math\Shapes\Quad.cs" />
-    <Compile Include="Math\Shapes\Triangle.cs" />
-    <Compile Include="Math\Shapes\Base\IndexedShapeBase.cs" />
-    <Compile Include="Math\TransformationExtension.cs" />
-    <Compile Include="Exceptions\GlyphException.cs" />
-    <Compile Include="Axes.cs" />
-    <Compile Include="Resolver\GlyphDependency.cs" />
-    <Compile Include="Resolver\GlyphResolvableMemberCache.cs" />
-    <Compile Include="IO\FileType.cs" />
-    <Compile Include="GlyphData.cs" />
-    <Compile Include="IDirtable.cs" />
-    <Compile Include="IDrawClient.cs" />
-    <Compile Include="IFlipable.cs" />
-    <Compile Include="IHandlable.cs" />
-    <Compile Include="Resolver\ResolveTargetsAttribute.cs" />
-    <Compile Include="Resolver\ResolveTargets.cs" />
-    <Compile Include="IO\ILoadFormat.cs" />
-    <Compile Include="IO\ISaveFormat.cs" />
-    <Compile Include="IO\ISaveLoadFormat.cs" />
-    <Compile Include="IO\Base\SaveLoadFormatBase.cs" />
-    <Compile Include="ITimeUnscalable.cs" />
-    <Compile Include="Math\IArea.cs" />
-    <Compile Include="Math\IShape.cs" />
-    <Compile Include="Math\MathUtils.cs" />
-    <Compile Include="Math\Matrix3x3.cs" />
-    <Compile Include="Math\Shapes\CenteredRectangle.cs" />
-    <Compile Include="Math\Shapes\Circle.cs" />
-    <Compile Include="Math\Shapes\IntersectionUtils.cs" />
-    <Compile Include="Math\Shapes\IRectangle.cs" />
-    <Compile Include="Math\Shapes\RectangleExtensions.cs" />
-    <Compile Include="Math\Shapes\TopLeftRectangle.cs" />
-    <Compile Include="Math\Transformation.cs" />
-    <Compile Include="Point.Extension.cs" />
-    <Compile Include="Observation\Properties\INotifyPropertyChangedConfiguration.cs" />
-    <Compile Include="Observation\Properties\IPropertyChangedObservable.cs" />
-    <Compile Include="Observation\Properties\NotifyPropertyChangedConfiguration.cs" />
-    <Compile Include="Observation\Properties\PropertyChangedObservable.cs" />
-    <Compile Include="Observation\Properties\ConfigurableNotifyPropertyChanged.cs" />
-    <Compile Include="Observation\Properties\SubjectPool.cs" />
-    <Compile Include="Rectangle.Extension.cs" />
-    <Compile Include="Referential.cs" />
-    <Compile Include="RepresentativeEqualityComparer.cs" />
-    <Compile Include="SceneNodeExtension.cs" />
-    <Compile Include="SpriteBatchContext.cs" />
-    <Compile Include="SpriteBatchStack.cs" />
-    <Compile Include="InstancePool.cs" />
-    <Compile Include="Texture2D.Extension.cs" />
-    <Compile Include="ElapsedTime.cs" />
-    <Compile Include="Float.Extension.cs" />
-    <Compile Include="UnusedContentLibrary.cs" />
-    <Compile Include="Vector2.Extension.cs" />
-    <Compile Include="Vector3.Extension.cs" />
-    <Compile Include="ContentLibrary.cs" />
-    <Compile Include="Orientation.cs" />
-    <Compile Include="Period.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Transition\ITimingFunction.cs" />
-    <Compile Include="Transition\ITransition.cs" />
-    <Compile Include="Transition\TransitionVector.cs" />
-    <Compile Include="Transition\BezierFunction.cs" />
-    <Compile Include="Transition\CustomFunction.cs" />
-    <Compile Include="Transition\LinearFunction.cs" />
-    <Compile Include="Transition\StepsFunction.cs" />
-    <Compile Include="Transition\TransitionColor.cs" />
-    <Compile Include="Transition\TransitionFloat.cs" />
-    <Compile Include="Transition\TransitionVector2.cs" />
-    <Compile Include="Transition\TransitionVector3.cs" />
-    <Compile Include="Transition\TransitionVector4.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\External\Fingear\External\Stave\Diese.Collections %28Stave%29\Diese.Collections %28Stave%29.csproj">
-      <Project>{aa20cdf3-72ed-48da-ae3c-74c6fe9003fb}</Project>
-      <Name>Diese.Collections %28Stave%29</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\External\Fingear\External\Taskete\Diese %28Taskete%29\Diese %28Taskete%29.csproj">
-      <Project>{dfdab89c-1379-4bfa-93c9-75e1e7b16010}</Project>
-      <Name>Diese %28Taskete%29</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\External\Simulacra\External\Niddle\Niddle\Niddle.csproj">
-      <Project>{cb5183d5-f68e-4129-a716-7f9eb33ce223}</Project>
-      <Name>Niddle</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\External\Simulacra\Simulacra\Simulacra.csproj">
-      <Project>{dfd5170c-d6c2-4815-88ed-6aa011d26d84}</Project>
-      <Name>Simulacra</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="FodyWeavers.xml" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
